--- a/_posts/2018-07-31-安装GenieACS.md
+++ b/_posts/2018-07-31-安装GenieACS.md
@@ -9,150 +9,116 @@ categories: Linux
 参考文档：https://www.genieacs.com/docs/
 
 ### 1.安装node.js
-cd /home
-
-wget https://nodejs.org/dist/v8.10.0/node-v8.10.0-linux-x64.tar.xz
-
-tar zxvf node-v8.10.0-linux-x64.tar.xz 
-
-xz node-v8.10.0-linux-x64.tar.xz 
-
-xz -d node-v8.10.0-linux-x64.tar.xz 
-
-tar xvf node-v8.10.0-linux-x64.tar 
-
-mv node-v8.10.0-linux-x64 /usr/local/node
+	# cd /home
+	# wget https://nodejs.org/dist/v8.10.0/node-v8.10.0-linux-x64.tar.xz
+	# tar zxvf node-v8.10.0-linux-x64.tar.xz 
+	# xz node-v8.10.0-linux-x64.tar.xz 
+	# xz -d node-v8.10.0-linux-x64.tar.xz 
+	# tar xvf node-v8.10.0-linux-x64.tar 
+	# mv node-v8.10.0-linux-x64 /usr/local/node
 
 将如下两行追加到文件/etc/profile里；
 
-export NODE_HOME=/usr/local/node
-
-export PATH=$NODE_HOME/bin:$PATH
+	export NODE_HOME=/usr/local/node
+	export PATH=$NODE_HOME/bin:$PATH
 
 然后使之生效；
 
-source /etc/profile
+	source /etc/profile
 
 ### 2.安装mongodb
-cd /home
-
-wget https://fastdl.mongodb.org/linux/mongodb-linux-x86_64-rhel70-3.4.16.tgz
-
-tar zxvf mongodb-linux-x86_64-rhel70-3.4.16.tgz 
-
-mv mongodb-linux-x86_64-rhel70-3.4.16 /usr/local/mongodb
+	# cd /home
+	# wget https://fastdl.mongodb.org/linux/mongodb-linux-x86_64-rhel70-3.4.16.tgz
+	# tar zxvf mongodb-linux-x86_64-rhel70-3.4.16.tgz 
+	# mv mongodb-linux-x86_64-rhel70-3.4.16 /usr/local/mongodb
 
 修改文件/etc/profile
 
-export PATH=$NODE_HOME/bin:/usr/local/mongodb/bin:$PATH
+	export PATH=$NODE_HOME/bin:/usr/local/mongodb/bin:$PATH
 
 使之生效 source /etc/profile
 
-mkdir -p /var/log/mongo
+	mkdir -p /var/log/mongo
 
 启动mongodb
 
-nohup /usr/local/mongodb/bin/mongod -logpath /var/log/mongo/mongo.log -logappend -fork >> /var/log/mongo/mongod.log 2>&1 &
+	nohup /usr/local/mongodb/bin/mongod -logpath /var/log/mongo/mongo.log -logappend -fork >> /var/log/mongo/mongod.log 2>&1 &
 
 ### 3.安装cnpm
-npm install -g cnpm
+	npm install -g cnpm
 ### 4.安装genieace
-cnpm install -g genieacs
+	cnpm install -g genieacs
 
 ### 5.安装Ruby 2.2.2
-yum install openssl-devel
-
-cd /home
-
-wget https://ruby.taobao.org/mirrors/ruby/2.2/ruby-2.2.4.tar.gz
-
-wget https://ruby.taobao.org/mirrors/ruby/2.3/ruby-2.3.6.tar.gz (使用这个版本，
-后面的bundle需要版本>=2.3.0)
-
-tar zxvf ruby-2.2.4.tar.gz
-
-cd ruby-2.2.4
-
-./configure --disable-install-rdoc
-make && make prefix=/usr/local install
-
+	# yum install openssl-devel
+	# cd /home
+	# wget https://ruby.taobao.org/mirrors/ruby/2.2/ruby-2.2.4.tar.gz
+	# wget https://ruby.taobao.org/mirrors/ruby/2.3/ruby-2.3.6.tar.gz (使用这个版本，后面的bundle需要版本>=2.3.0)
+	# tar zxvf ruby-2.2.4.tar.gz
+	# cd ruby-2.2.4
+	# ./configure --disable-install-rdoc
+	# make && make prefix=/usr/local install
+	
 查看ruby 版本号: ruby -v
 
 ### 6.安装bundler 
 下面两条命令是修改ruby的源，使用taobao的源，安装比较快。
 
-gem sources --remove https://rubygems.org/
-
-gem sources -a https://ruby.taobao.org/
-
-gem sources -l
-
-gem install bundler --no-doc
-
-gem install rails
-
-mkdir -p /var/log/genieacs
+	# gem sources --remove https://rubygems.org/
+	# gem sources -a https://ruby.taobao.org/
+	# gem sources -l
+	# gem install bundler --no-doc
+	# gem install rails
+	# mkdir -p /var/log/genieacs
 
 后台启动各服务：
 
-nohup /usr/local/node/lib/node_modules/genieacs/bin/genieacs-cwmp >> /var/log/genieacs/genieacs-cwmp.log 2>&1 &
-
-nohup /usr/local/node/lib/node_modules/genieacs/bin/genieacs-nbi >> /var/log/genieacs/genieacs-nbi.log 2>&1 &
-
-nohup /usr/local/node/lib/node_modules/genieacs/bin/genieacs-fs >> /var/log/genieacs/genieacs-fs.log 2>&1 &
+	# nohup /usr/local/node/lib/node_modules/genieacs/bin/genieacs-cwmp >> /var/log/genieacs/genieacs-cwmp.log 2>&1 &
+	# nohup /usr/local/node/lib/node_modules/genieacs/bin/genieacs-nbi >> /var/log/genieacs/genieacs-nbi.log 2>&1 &
+	# nohup /usr/local/node/lib/node_modules/genieacs/bin/genieacs-fs >> /var/log/genieacs/genieacs-fs.log 2>&1 &
 
 ### 7.下载genieacs工程目录
-cd /home
-
-git clone https://github.com/zaidka/genieacs-gui.git
+	# cd /home
+	# git clone https://github.com/zaidka/genieacs-gui.git
 
 Once that is done, create configuration files by copying the provided templates.
 
-cd genieacs-gui
-
-cp config/graphs-sample.json.erb config/graphs.json.erb
-
-cp config/index_parameters-sample.yml config/index_parameters.yml
-
-cp config/summary_parameters-sample.yml config/summary_parameters.yml
-
-cp config/parameters_edit-sample.yml config/parameters_edit.yml
-
-cp config/parameter_renderers-sample.yml config/parameter_renderers.yml
-
-cp config/roles-sample.yml config/roles.yml
-
-cp config/users-sample.yml config/users.yml
+	# cd genieacs-gui
+	# cp config/graphs-sample.json.erb config/graphs.json.erb
+	# cp config/index_parameters-sample.yml config/index_parameters.yml
+	# cp config/summary_parameters-sample.yml config/summary_parameters.yml
+	# cp config/parameters_edit-sample.yml config/parameters_edit.yml
+	# cp config/parameter_renderers-sample.yml config/parameter_renderers.yml
+	# cp config/roles-sample.yml config/roles.yml
+	# cp config/users-sample.yml config/users.yml
 
 替换第一行gem源地址：
 
-source ‘https://ruby.taobao.org’
+	source ‘https://ruby.taobao.org’
 
 执行命令
 
-bundle install 
+	bundle install 
 
 You’re now good to go. Start the application server:
 
 ### 8.放开访问源的访问控制
 编辑config/application.rg
 
-class Application < Rails::Application
+	class Application < Rails::Application
+		config.web_console.whitelisted_ips = '192.168.1.0/255.255.255.0’
+	end
 
-  config.web_console.whitelisted_ips = '192.168.1.0/255.255.255.0’
+执行如下命令，进行DB迁移（DB Migrate）
 
-end
-
-DB Migrate
-
-rails db:migrate RAILS_ENV=development
+	rails db:migrate RAILS_ENV=development
 
 ### 9.启动genieacs-gui
 启动genieacs-gui服务：
 
-cd /home/genieacs-gui
-nohup rails s --binding=192.168.1.233 --port=80 >> /var/log/geineacs/genieacs-gui.log 2>&1 &
+	# cd /home/genieacs-gui
+	# nohup rails s --binding=192.168.1.107 --port=80 >> /var/log/geineacs/genieacs-gui.log 2>&1 &
 
-启动后访问 http://192.168.1.108
+启动后访问 http://192.168.1.107
 
 用户名/密码：admin/admin
