--- a/_posts/2018-07-31-安装GenieACS.md
+++ b/_posts/2018-07-31-安装GenieACS.md
@@ -6,7 +6,7 @@ categories: Linux
 ---
 关键字：GenieACS, TR069, node.js, npm, Ruby on Rails
 
-参考文档：https://www.genieacs.com/docs/
+参考文档：[https://www.genieacs.com/docs/](https://www.genieacs.com/docs/)
 
 ### 1.安装node.js
 	# cd /home
